# simple-shooter

./: .gitignore  CMakeLists.txt  README.md
Projekt/: BasicModel.cpp  BasicModel.h  Initializer.cpp  Initializer.h  Terrain.cpp  Terrain.h  Texture.cpp  Texture.h  TexturedModel.cpp
biblioteki/: README.md
cmake/: FindSDL2_mixer.cmake  FindSDL2_net.cmake
projekt/: HeightMap.h
res/models/: headphones_UVW.fbx
res/models/char/: char.mtl
res/models/kostka/: kos.mtl
res/models/pistolet/: pistolet.mtl
res/models/teren/: teren.blend  teren.blend1  teren.mtl  test.mtl
res/models/teren_org/: teren.blend  teren.blend1  teren.mtl
simple-shooter/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  fragment.fs  simple-shooter.sln  simple-shooter.vcxproj  simple-shooter.vcxproj.filters  tutorial.cpp
src/: moveNewFiles.bat.in
src/client/: BoundingBox.cpp  BoundingBox.h  Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  Collision.cpp  Collision.h  CommonHeader.h  Common_Headears.h  DirLight.cpp  DirLight.h  Entity.cpp  Entity.h  Flashlight.cpp  Flashlight.h  Fog.cpp  Fog.h  Game.cpp  Game.h  GameEntity.cpp  GameManager.cpp  GameManager.h  GameSprite.cpp  GameSprite.h  Geometry.cpp  Geometry.h  Graphics.cpp  Graphics.h  HUD.cpp  HUD.h  HUDManager.cpp  HUDManager.h  HeightMap.cpp  HeightMap.h  Heightmap.cpp  Heightmap.h  Image2D.cpp  Image2D.h  LightObject.cpp  (+73 more)
src/client/shaders/: LightShader.fs  LightShader.vs  boundingBox.fs  bullet.vs  fragment.fs  main_shader.frag  menubox.fs  menubox.vs  shader1.frag  shader1.vert  skybox.fs  sprite.vs  terrain.frag  text.fs  texture.fs  texture2.fs
